Integrates a web scraper to fetch results from Dicio

--- a/.env.example
+++ b/.env.example
@@ -10,6 +10,9 @@ LOG_LEVEL=debug
 DICIONARIO_ABERTO_BASE_URI=https://api.dicionario-aberto.net
 DICIONARIO_ABERTO_FORCE_LIVE_CLIENT=false
 
+DICIO_BASE_URI=https://www.dicio.com.br
+DICIO_FORCE_LIVE_CLIENT=false
+
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
