--- a/.env.example
+++ b/.env.example
@@ -7,12 +7,6 @@ APP_URL=http://localhost
 LOG_CHANNEL=stack
 LOG_LEVEL=debug
 
-DICIONARIO_ABERTO_BASE_URI=https://api.dicionario-aberto.net
-DICIONARIO_ABERTO_FORCE_LIVE_CLIENT=false
-
-DICIO_BASE_URI=https://www.dicio.com.br
-DICIO_FORCE_LIVE_CLIENT=false
-
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
@@ -53,3 +47,9 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+# Dictionary Services
+
+DICIONARIO_ABERTO_FORCE_LIVE_CLIENT=false
+
+DICIO_FORCE_LIVE_CLIENT=false
