--- a/phpstan.neon.dist
+++ b/phpstan.neon.dist
@@ -14,6 +14,9 @@ parameters:
 
     ignoreErrors:
         - '/^Call to an undefined method Mockery\\ExpectationInterface\|Mockery\\HigherOrderMessage::.+\(\)\.$/'
+        -
+            message: "#^Method .+ throws checked exception .+ but it's missing from the PHPDoc @throws tag.$#"
+            path: tests/*
 
     checkFunctionNameCase: true
     checkMissingIterableValueType: false
@@ -35,4 +38,5 @@ parameters:
             - 'InvalidArgumentException'
             - 'Illuminate\Contracts\Container\BindingResolutionException'
             - 'PHPUnit\Framework\Exception'
+            - 'RuntimeException'
             - 'Symfony\Component\HttpKernel\Exception\HttpException'
